--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
+aiohttp==3.6.1
+async-timeout==3.0.1
+attrs==19.1.0
+chardet==3.0.4
 Django==2.2.5
 djangorestframework==3.10.3
+idna==2.8
+idna-ssl==1.1.0
+multidict==4.5.2
 Pillow==6.1.0
 psycopg2==2.8.3
 pytz==2019.2
 sqlparse==0.3.0
+typing-extensions==3.7.4
+yarl==1.3.0
