--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ attrs==19.1.0
 chardet==3.0.4
 Django==2.2.5
 djangorestframework==3.10.3
+gunicorn==19.9.0
 idna==2.8
 idna-ssl==1.1.0
 multidict==4.5.2
 Pillow==6.1.0
-psycopg2==2.8.3
+psycopg2-binary==2.8.3
 pytz==2019.2
 sqlparse==0.3.0
-typing-extensions==3.7.4
 yarl==1.3.0
