--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.6.1
 async-timeout==3.0.1
 attrs==19.1.0
+certifi==2019.9.11
 chardet==3.0.4
 Django==2.2.5
 djangorestframework==3.10.3
@@ -11,6 +12,9 @@ multidict==4.5.2
 Pillow==6.1.0
 psycopg2-binary==2.8.3
 pytz==2019.2
+requests==2.22.0
 sorl-thumbnail==12.5.0
 sqlparse==0.3.0
+urllib3==1.25.6
+vk==2.0.2
 yarl==1.3.0
