--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Pillow==6.1.0
 psycopg2-binary==2.8.3
 pytz==2019.2
 requests==2.22.0
+six==1.12.0
 sorl-thumbnail==12.5.0
 sqlparse==0.3.0
 urllib3==1.25.6
