--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,19 @@
 aiohttp==3.6.1
 async-timeout==3.0.1
-asyncio==3.4.3
-attrs==19.1.0
+attrs==19.2.0
 beautifulsoup4==4.8.0
 chardet==3.0.4
-defusedxml==0.6.0
-Django==2.2.5
+Django==2.2.6
 djangorestframework==3.10.3
-grab==0.6.41
-gunicorn==19.9.0
 idna==2.8
-idna-ssl==1.1.0
-lxml==4.4.1
 multidict==4.5.2
 Pillow==6.1.0
-psycopg2==2.8.3
+pkg-resources==0.0.0
 psycopg2-binary==2.8.3
-pycurl==7.43.0.1
 python-slugify==3.0.4
-pytils==0.3
-pytz==2019.2
-selection==0.0.14
-six==1.12.0
+pytz==2019.3
 sorl-thumbnail==12.5.0
-soupsieve==1.9.3
+soupsieve==1.9.4
 sqlparse==0.3.0
 text-unidecode==1.3
-user-agent==0.1.9
-weblib==0.1.30
 yarl==1.3.0
