--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,30 @@ aiohttp==3.6.1
 async-timeout==3.0.1
 attrs==19.2.0
 beautifulsoup4==4.8.0
+certifi==2019.9.11
 chardet==3.0.4
+decorator==4.0.11
 Django==2.2.6
 djangorestframework==3.10.3
+filetype==1.0.5
 idna==2.8
+imageio==2.1.2
+instagram-private-api==1.6.0.0
+instagram-private-api-extensions==0.3.8
+instapy-cli==0.0.12
+moviepy==0.2.3.2
 multidict==4.5.2
+numpy==1.17.2
 Pillow==6.1.0
 pkg-resources==0.0.0
 psycopg2-binary==2.8.3
 python-slugify==3.0.4
 pytz==2019.3
+requests==2.22.0
 sorl-thumbnail==12.5.0
 soupsieve==1.9.4
 sqlparse==0.3.0
 text-unidecode==1.3
+tqdm==4.11.2
+urllib3==1.25.6
 yarl==1.3.0
