--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,46 @@
 aiohttp==3.6.1
 async-timeout==3.0.1
+asyncio==3.4.3
 attrs==19.2.0
 beautifulsoup4==4.8.0
 certifi==2019.9.11
 chardet==3.0.4
 decorator==4.0.11
+defusedxml==0.6.0
 Django==2.2.6
+django-debug-toolbar==2.1
 djangorestframework==3.10.3
 filetype==1.0.5
+grab==0.6.41
+gunicorn==19.9.0
 idna==2.8
+idna-ssl==1.1.0
 imageio==2.1.2
 instagram-private-api==1.6.0.0
 instagram-private-api-extensions==0.3.8
 instapy-cli==0.0.12
+lxml==4.4.1
+meld3==2.0.0
 moviepy==0.2.3.2
 multidict==4.5.2
 numpy==1.17.2
 Pillow==6.1.0
+psycopg2==2.8.3
 psycopg2-binary==2.8.3
+pycurl==7.43.0.1
 python-slugify==3.0.4
+pytils==0.3
 pytz==2019.3
 requests==2.22.0
+selection==0.0.14
+six==1.12.0
 sorl-thumbnail==12.5.0
 soupsieve==1.9.4
 sqlparse==0.3.0
+supervisor==4.0.4
 text-unidecode==1.3
 tqdm==4.11.2
 urllib3==1.25.6
+user-agent==0.1.9
+weblib==0.1.30
 yarl==1.3.0
