--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ decorator==4.0.11
 defusedxml==0.6.0
 Django==2.2.6
 django-debug-toolbar==2.1
+django-extensions==2.2.5
 djangorestframework==3.10.3
 filetype==1.0.5
 grab==0.6.41
@@ -43,4 +44,5 @@ tqdm==4.11.2
 urllib3==1.25.6
 user-agent==0.1.9
 weblib==0.1.30
+Werkzeug==0.16.0
 yarl==1.3.0
