--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.6.1
+aniso8601==7.0.0
 async-timeout==3.0.1
 asyncio==3.4.3
 attrs==19.2.0
@@ -12,6 +13,10 @@ django-debug-toolbar==2.1
 django-extensions==2.2.5
 djangorestframework==3.10.3
 filetype==1.0.5
+graphene==2.1.8
+graphene-django==2.6.0
+graphql-core==2.2.1
+graphql-relay==2.0.0
 gunicorn==19.9.0
 idna==2.8
 idna-ssl==1.1.0
@@ -25,12 +30,15 @@ moviepy==0.2.3.2
 multidict==4.5.2
 numpy==1.17.2
 Pillow==6.1.0
+promise==2.2.1
 psycopg2-binary==2.8.3
 python-slugify==3.0.4
 pytils==0.3
 pytz==2019.3
 requests==2.22.0
+Rx==1.6.1
 selection==0.0.14
+singledispatch==3.4.0.3
 six==1.12.0
 sorl-thumbnail==12.5.0
 soupsieve==1.9.4
