--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ aniso8601==7.0.0
 async-timeout==3.0.1
 asyncio==3.4.3
 attrs==19.2.0
-beautifulsoup4==4.8.0
-certifi==2019.9.11
+beautifulsoup4==4.8.1
+certifi==2019.11.28
 chardet==3.0.4
 decorator==4.0.11
 defusedxml==0.6.0
@@ -17,7 +17,7 @@ graphene==2.1.8
 graphene-django==2.6.0
 graphql-core==2.2.1
 graphql-relay==2.0.0
-gunicorn==19.9.0
+gunicorn==20.0.4
 idna==2.8
 idna-ssl==1.1.0
 imageio==2.1.2
@@ -31,7 +31,7 @@ multidict==4.5.2
 numpy==1.17.2
 Pillow==6.2.1
 promise==2.2.1
-psycopg2-binary==2.8.3
+psycopg2==2.8.4
 python-slugify==3.0.4
 pytils==0.3
 pytz==2019.3
@@ -41,11 +41,11 @@ selection==0.0.14
 singledispatch==3.4.0.3
 six==1.12.0
 sorl-thumbnail==12.5.0
-soupsieve==1.9.4
+soupsieve==1.9.5
 sqlparse==0.3.0
 text-unidecode==1.3
 tqdm==4.11.2
-urllib3==1.25.6
+urllib3==1.25.7
 user-agent==0.1.9
 weblib==0.1.30
 Werkzeug==0.16.0
