--- a/requirements.txt
+++ b/requirements.txt
@@ -3,49 +3,63 @@ aniso8601==7.0.0
 async-timeout==3.0.1
 asyncio==3.4.3
 attrs==19.2.0
-beautifulsoup4==4.8.1
-certifi==2019.11.28
+beautifulsoup4==4.8.0
+certifi==2019.9.11
 chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 decorator==4.0.11
 defusedxml==0.6.0
 Django==2.2.7
+django-allauth==0.40.0
 django-debug-toolbar==2.1
 django-extensions==2.2.5
+django-rest-auth==0.9.5
+django-rest-swagger==2.2.0
 djangorestframework==3.10.3
 filetype==1.0.5
 graphene==2.1.8
 graphene-django==2.6.0
 graphql-core==2.2.1
 graphql-relay==2.0.0
-gunicorn==20.0.4
+gunicorn==19.9.0
 idna==2.8
 idna-ssl==1.1.0
 imageio==2.1.2
 instagram-private-api==1.6.0.0
 instagram-private-api-extensions==0.3.8
 instapy-cli==0.0.12
+itypes==1.1.0
+Jinja2==2.10.3
 lxml==4.4.1
+MarkupSafe==1.1.1
 meld3==2.0.0
 moviepy==0.2.3.2
 multidict==4.5.2
 numpy==1.17.2
+oauthlib==3.1.0
+openapi-codec==1.3.2
 Pillow==6.2.1
 promise==2.2.1
-psycopg2==2.8.4
+psycopg2-binary==2.8.3
 python-slugify==3.0.4
+python3-openid==3.1.0
 pytils==0.3
 pytz==2019.3
 requests==2.22.0
+requests-oauthlib==1.3.0
 Rx==1.6.1
 selection==0.0.14
+simplejson==3.17.0
 singledispatch==3.4.0.3
 six==1.12.0
 sorl-thumbnail==12.5.0
-soupsieve==1.9.5
+soupsieve==1.9.4
 sqlparse==0.3.0
 text-unidecode==1.3
 tqdm==4.11.2
-urllib3==1.25.7
+uritemplate==3.0.0
+urllib3==1.25.6
 user-agent==0.1.9
 weblib==0.1.30
 Werkzeug==0.16.0
