--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 aiohttp==3.6.1
+amqp==2.5.2
 aniso8601==7.0.0
 async-timeout==3.0.1
 asyncio==3.4.3
 attrs==19.2.0
 beautifulsoup4==4.8.0
+billiard==3.6.3.0
+celery==4.4.1
 certifi==2019.9.11
 chardet==3.0.4
 coreapi==2.3.3
@@ -26,11 +29,13 @@ gunicorn==19.9.0
 idna==2.8
 idna-ssl==1.1.0
 imageio==2.1.2
+importlib-metadata==1.5.0
 instagram-private-api==1.6.0.0
 instagram-private-api-extensions==0.3.8
 instapy-cli==0.0.12
 itypes==1.1.0
 Jinja2==2.10.3
+kombu==4.6.8
 lxml==4.4.1
 MarkupSafe==1.1.1
 meld3==2.0.0
@@ -40,12 +45,14 @@ numpy==1.17.2
 oauthlib==3.1.0
 openapi-codec==1.3.2
 Pillow==6.2.1
+pkg-resources==0.0.0
 promise==2.2.1
 psycopg2-binary==2.8.3
 python-slugify==3.0.4
 python3-openid==3.1.0
 pytils==0.3
 pytz==2019.3
+redis==3.4.1
 requests==2.22.0
 requests-oauthlib==1.3.0
 Rx==1.6.1
@@ -61,6 +68,9 @@ tqdm==4.11.2
 uritemplate==3.0.0
 urllib3==1.25.6
 user-agent==0.1.9
+vine==1.3.0
+vk-api==11.7.0
 weblib==0.1.30
 Werkzeug==0.16.0
 yarl==1.3.0
+zipp==3.0.0
