--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ decorator==4.0.11
 defusedxml==0.6.0
 Django==2.2.7
 django-allauth==0.40.0
+django-celery-beat==2.0.0
 django-debug-toolbar==2.1
 django-extensions==2.2.5
 django-rest-auth==0.9.5
 django-rest-swagger==2.2.0
+django-timezone-field==4.0
 djangorestframework==3.10.3
 filetype==1.0.5
 graphene==2.1.8
@@ -48,6 +50,8 @@ Pillow==6.2.1
 pkg-resources==0.0.0
 promise==2.2.1
 psycopg2-binary==2.8.3
+python-crontab==2.4.0
+python-dateutil==2.8.1
 python-slugify==3.0.4
 python3-openid==3.1.0
 pytils==0.3
